force-app/main/default/objects/Fotos__c/Fotos__c.object-meta.xml
<CustomObject>
    <label>Foto</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Fotos Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fotos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>