force-app/main/default/objects/Fotos__c/fields/ClienteVisita__c.field-meta.xml
<CustomField>
    <fullName>ClienteVisita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cadastro de Cliente da Visita</label>
    <referenceTo>Cadastro_ClientedaVisita__c</referenceTo>
    <relationshipLabel>Fotos</relationshipLabel>
    <relationshipName>Fotos</relationshipName>
    <type>Lookup</type>
</CustomField>