force-app/main/default/objects/Fotos__c/fields/FotoControl__c.field-meta.xml
<CustomField>
    <fullName>FotoControl__c</fullName>
    <label>Foto Item</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>