force-app/main/default/objects/Fotos__c/fields/IsIntegrated__c.field-meta.xml
<CustomField>
    <fullName>IsIntegrated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lembrete</label>
    <type>Checkbox</type>
</CustomField>