force-app/main/default/objects/Fotos__c/fields/RTR__c.field-meta.xml
<CustomField>
    <fullName>RTR__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>RTR</label>
    <referenceTo>TechnicalReport__c</referenceTo>
    <relationshipLabel>Fotos</relationshipLabel>
    <relationshipName>Fotos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>